<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->


    <header
        android:fragment="com.spam.finnh.gamecollection.Menues.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general"
        android:id="@+id/header_General"/>

    <header
        android:fragment="com.spam.finnh.gamecollection.Menues.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications"
        android:id="@+id/header_Notification"/>

    <header
        android:fragment="com.spam.finnh.gamecollection.Menues.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync"
        android:id="@+id/header_DataSync"/>

    <header
        android:fragment="com.spam.finnh.gamecollection.Menues.SettingsActivity$AppearanceFragment"
        android:icon="@drawable/ic_action_name"
        android:title="@string/pref_appearance"
        android:id="@+id/header_Appearance"/>


</preference-headers>
